<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PictureJump</string>

	<string name="picture_jump_desc">「送信」または「受信」を選択</string>
	<string name="send_picture_label">画像を送信</string>
	<string name="receive_picture_label">画像を受信</string>

	<string name="picture_send_desc">画像送信情報</string>
	<string name="clear_label">クリア</string>
    <string name="send_label">送信</string>
    <string name="picture_select_title">画像を選択</string>
    
    <string name="picture_select_label">選択してください</string>

    <string name="choose_device_desc">送信デバイス情報</string>
    <string name="search_device_label">デバイス検索</string>

    <string name="picture_receive_desc">画像受信情報</string>
    <string name="reset_label">再受信</string>
    <string name="store_label">保存</string>

    <string name="sender_label">送信元</string>
    <string name="receiver_label">送信先</string>
	<string name="picture_label">画像</string>
    
    <string name="bluetooth_not_supported">Bluetoothがサポートされていません</string>
    <string name="bluetooth_not_valid">Bluetoothが有効に設定されていません</string>
    <string name="bluetooth_can_not_discoverable">Bluetooth検出が有効化できません</string>
    
    <string name="device_search_title">デバイス検索</string>
    <string name="device_search_progress">しばらくお待ちください・・・</string>
    
    <string name="picture_receive_progress_title">画像受信</string>
    <string name="picture_receive_progress_waiting">接続を待機しています・・・</string>
    <string name="picture_receive_progress_receiving">画像を受信しています・・・</string>
    <string name="picture_receive_succeed">画像を受信しました</string>
    <string name="picture_receive_failed">画像受信に失敗しました</string>
    
    <string name="picture_send_progress_title">画像送信</string>
    <string name="picture_send_progress_waiting">接続しています・・・</string>
    <string name="picture_send_progress_sending">画像を送信しています・・・</string>
    <string name="picture_send_succeed">画像が送信されました</string>
    <string name="picture_send_failed">画像送信に失敗しました</string>
    
    <string name="picture_save_succeed">SDカードに画像を保存しました</string>
    <string name="picture_save_failed">画像保存に失敗しました</string>
    <string name="camera_open_failed">カメラ起動に失敗しました</string>
    
    
</resources>
