<?xml version="1.0" encoding="utf-8"?>
<!-- リニアレイアウト(縦並び) -->
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="match_parent"
  android:layout_height="match_parent">

  <!-- 画面タイトル -->
  <TextView
    android:text="@string/picture_receive_desc"
    android:textSize="20sp"
    android:layout_marginTop="5dp"
    android:layout_marginBottom="5dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" />

  <!-- テーブルレイアウト -->
  <TableLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <!-- 1行目 -->
    <TableRow>
      <!-- 送信元テキスト -->
      <TextView
        android:text="@string/sender_label"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="3dp"
        android:gravity="center_vertical" />

      <!-- 受信先デバイステキスト -->
      <TextView
        android:id="@+id/tv_received_device"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:layout_margin="3dp"
        android:background="@drawable/border" />
    </TableRow>

    <!-- 2行目 -->
    <TableRow>
      <!-- 画像テキスト -->
      <TextView
        android:text="@string/picture_label"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="3dp"
        android:gravity="center_vertical" />
      <!-- 画像 -->
      <ImageView
        android:id="@+id/iv_received_picture"
        android:background="@drawable/border"
        android:layout_margin="3dp"
        android:maxWidth="190dp"
        android:maxHeight="190dp"
        android:minWidth="190dp"
        android:minHeight="190dp" />
    </TableRow>

  </TableLayout>

  <!-- リニアレイアウト(横並び) -->
  <LinearLayout
    android:orientation="horizontal"
    android:layout_marginTop="20dp"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <!-- 再受信ボタン -->
    <Button
      android:id="@+id/btn_reset"
      android:text="@string/reset_label"
      android:layout_width="120dp"
      android:layout_height="wrap_content"
      android:padding="1dp"
      android:drawableLeft="@android:drawable/ic_menu_more" />

    <!-- 保存ボタン -->
    <Button
      android:id="@+id/btn_store"
      android:text="@string/store_label"
      android:layout_width="120dp"
      android:layout_height="wrap_content"
      android:padding="1dp"
      android:drawableLeft="@android:drawable/ic_menu_save" />

  </LinearLayout>

</LinearLayout>