<?xml version="1.0" encoding="utf-8"?>
<!-- リニアレイアウト(縦並び) -->
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="match_parent"
  android:layout_height="match_parent">

  <!-- 画面タイトル -->
  <TextView
    android:text="@string/picture_send_desc"
    android:textSize="20sp"
    android:layout_marginTop="5dp"
    android:layout_marginBottom="5dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" />

  <!-- テーブルレイアウト -->
  <TableLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <!-- 1行目 -->
    <TableRow
      android:layout_margin="2dp">
      <!-- 受信先テキスト -->
      <TextView
        android:text="@string/receiver_label"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="3dp"
        android:gravity="center_vertical" />

      <!-- 選択デバイステキスト -->
      <TextView
        android:id="@+id/tv_selected_device"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:layout_margin="3dp"
        android:background="@drawable/border" />

      <!-- 送信先選択ボタン -->
      <ImageButton
        android:id="@+id/ibtn_select_device"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:padding="3dp"
        android:src="@android:drawable/ic_menu_search"
        android:gravity="center_vertical" />
    </TableRow>

    <!-- 2行目 -->
    <TableRow
      android:layout_margin="2dp">
      <!-- 画像テキスト -->
      <TextView
        android:text="@string/picture_label"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="3dp"
        android:gravity="center_vertical" />

      <!-- 画像 -->
      <ImageView
        android:id="@+id/iv_selected_picture"
        android:background="@drawable/border"
        android:layout_margin="3dp"
        android:maxWidth="190dp"
        android:maxHeight="190dp"
        android:minWidth="190dp"
        android:minHeight="190dp" />

      <!-- リニアレイアウト(縦並び) -->
      <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical">
        <!-- ギャラリーボタン -->
        <ImageButton
          android:id="@+id/ibtn_gallery"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_margin="3dp"
          android:padding="3dp"
          android:src="@android:drawable/ic_menu_gallery" />
        <!-- カメラボタン -->
        <ImageButton
          android:id="@+id/ibtn_camera"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_margin="3dp"
          android:padding="3dp"
          android:src="@android:drawable/ic_menu_camera" />
        <!-- 回転ボタン -->
        <ImageButton
          android:id="@+id/ibtn_picture_rotate"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_margin="3dp"
          android:padding="3dp"
          android:src="@android:drawable/ic_menu_rotate" />

      </LinearLayout>
    </TableRow>
  </TableLayout>

  <!-- リニアレイアウト(横並び) -->
  <LinearLayout
    android:orientation="horizontal"
    android:layout_marginTop="20dp"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <!-- クリアボタン -->
    <Button
      android:id="@+id/btn_clear"
      android:text="@string/clear_label"
      android:layout_width="120dp"
      android:layout_height="wrap_content"
      android:padding="1dp"
      android:drawableLeft="@android:drawable/ic_menu_delete" />
    <!-- 送信ボタン -->
    <Button
      android:id="@+id/btn_send"
      android:text="@string/send_label"
      android:layout_width="120dp"
      android:layout_height="wrap_content"
      android:padding="1dp"
      android:drawableLeft="@android:drawable/ic_menu_send" />

  </LinearLayout>
</LinearLayout>